<resources>
    <string name="app_name">ActivityTaskDemo</string>
    <string name="start_standard_activity">start standard</string>
    <string name="start_singletop_activity">start singleTop</string>
    <string name="start_singletask_activity">start singleTask</string>
    <string name="start_singleinstance_activity">start singleInstance</string>
    <string name="start_dialog_activity">start dialog</string>
    <string name="start_fragment_activity">start fragment activity</string>
</resources>
